# news-management

./: News Management API.postman_collection.json  README.md  docker-compose.yml
api/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
api/src/: app.module.ts  main.ts  typeorm.config.ts
api/src/article/: article.controller.ts  article.entity.ts  article.module.ts  article.service.spec.ts  article.service.ts
api/src/health/: health.controller.ts
api/src/idempotency/: idempotency-key.entity.ts  idempotency.interceptor.ts  idempotency.module.ts  idempotency.service.spec.ts  idempotency.service.ts  (+1 more)
api/test/: app.e2e-spec.ts  jest-e2e.json
worker/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
worker/src/: main.py
worker/src/app/: __init__.py  article_job_handler.py  article_service.py
worker/src/config/: __init__.py  config.py
worker/src/di/: __init__.py  container.py
worker/src/domain/: __init__.py
worker/src/domain/article/: __init__.py  article.py  errors.py  ports.py
worker/src/domain/idempotency/: ports.py
worker/src/domain/message_queue/: __init__.py  ports.py
worker/src/domain/search/: __init__.py  ports.py
worker/src/infrastructure/: __init__.py
worker/src/infrastructure/elasticsearch/: __init__.py  elasticsearch_engine.py
worker/src/infrastructure/idempotency/: idempotency_checker.py
worker/src/infrastructure/postgres/: __init__.py  idempotency_repository.py
worker/src/infrastructure/rabbitmq/: __init__.py  rabbitmq_consumer.py
(+23 files in other folders)
