[tool.poetry]
name = "news-worker"
version = "0.1.0"
description = "Background worker for the news-management project (RabbitMQ + PostgreSQL + Elasticsearch)."
authors = ["Adriel <adrielalfeus@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  # Expose the existing `src` package so imports like `src.elasticsearch_client`
  # continue to work when installed via Poetry.
  { include = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pika = "^1.3.2"
elasticsearch = "^9.2.0"
pydantic = "^2.12.5"
pydantic-settings = "^2.12.0"
python-dotenv = "^1.2.1"
psycopg = {extras = ["binary"], version = "^3.3.2"}
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
news-worker = "src.main:start_consumer"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"


